Archive2/88/1d428378c37d67/output
main.cpp:5:12: error: nested redefinition of 'A'
    struct A{ };
           ^
main.cpp:3:8: note: previous definition is here
struct A
       ^
1 error generated.
