Archive2/88/1d428378c37d67/main.cpp
#include <iostream>

struct A
{
    struct A{ };
};

int main(){ }